[gd_scene load_steps=9 format=3 uid="uid://2xhtwxpgnyd8"]

[ext_resource type="Script" path="res://Scripts/UIs/DialogUI.gd" id="1_140ja"]
[ext_resource type="Texture2D" uid="uid://x8dib5g7o24i" path="res://icon.png" id="1_sdyv2"]
[ext_resource type="Script" path="res://addons/dialogue_manager/dialogue_label.gd" id="3_mn7km"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ibyt8"]
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.2, 0.2, 0.2, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_o3cdy"]
default_font_size = 20
Button/styles/normal = SubResource("StyleBoxFlat_ibyt8")
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_ibyt8")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wgvcq"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_tmvqk"]
font_size = 22

[sub_resource type="GDScript" id="GDScript_6ym8x"]
script/source = "extends ScrollContainer

signal selected(opt_id)

@onready
var opt_buttons_cont := $VBoxContainer

func _ready():
	visible = false
	# Make sure there are no buttons left from the editor
	for kid in opt_buttons_cont.get_children():
		opt_buttons_cont.remove_child(kid)
		kid.queue_free()

func show_options(opts : Array):
	var existing_btns := opt_buttons_cont.get_child_count()
	var min_len = min(len(opts), existing_btns)
	var delta = abs(len(opts) - existing_btns)
	
	for idx in min_len:
		var button_i := opt_buttons_cont.get_child(idx)
		button_i.text = opts[idx].text
		
	for i in delta:
		var idx : int = i + min_len
		
		if len(opts) < existing_btns:
			# Remove excess buttons
			var to_remove = opt_buttons_cont.get_child(idx)
			opt_buttons_cont.remove_child(to_remove)
			to_remove.queue_free()
		else:
			# Create missing buttons
			var button_i := Button.new()
			opt_buttons_cont.add_child.call_deferred(button_i)
			
			button_i.text = opts[idx].text
			button_i.custom_minimum_size.y = 50
			button_i.pressed.connect(
				func ():
					select(idx)
			)
		
	visible = len(opts) > 0
	
func select(idx: int):
	visible = false
	selected.emit(idx)
"

[node name="DialogUI_NPC" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o3cdy")
script = ExtResource("1_140ja")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -385.0
offset_top = -242.0
offset_right = 385.0
offset_bottom = 242.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wgvcq")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "GIGIO"
label_settings = SubResource("LabelSettings_tmvqk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 57

[node name="Portrait" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.8
texture = ExtResource("1_sdyv2")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DialogueLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("3_mn7km")
skip_action = "skip_dialogue"

[node name="OptionsCont" type="ScrollContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 220)
layout_mode = 2
size_flags_vertical = 3
vertical_scroll_mode = 2
script = SubResource("GDScript_6ym8x")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsCont"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Opt0" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsCont/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Opt A"

[node name="Opt1" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsCont/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Opt A"

[node name="Opt2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsCont/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Opt A"

[node name="Opt3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/OptionsCont/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 4
text = "Opt A"

[node name="CloseBtn" type="Button" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "X"

[connection signal="pressed" from="PanelContainer/CloseBtn" to="." method="_on_close_pressed"]
